Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriTextRetBooleanFail.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, text> yoda
        boolean y = yoda(true, true, true)
     end
end
